syntax = "proto3";
package catalog.distribution;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

/* A physical address for a distribution outlet.
 * NextId: 10 */
message OutletAddress {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  string street = 4;
  google.protobuf.StringValue unit = 5;
  string city = 6;
  string zip = 7;
  google.protobuf.Int32Value country_code = 8;
  string distribution_outlet_id = 9;
}
